-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0, 5.9.0
-
None
-
-
ea568c310d75fa921eba2c6ce2852f4617a176ea
In Qt Quick controls 1&2, after Qt 5.8 which displays the text selection handles in android, the handles are wrong directed in RTL languages, see the images :
https://ibb.co/fkLyFv
https://ibb.co/hwj3ha
https://ibb.co/ecfb2a
is there anyway to disable displaying text selections? or even using native text input system?
import QtQuick 2.7 import QtQuick.Controls 2.0 import QtQuick.Layouts 1.3 ApplicationWindow { visible: true width: 640 height: 480 title: qsTr("Hello World") Item { anchors.fill: parent Column { spacing: 10 anchors.fill: parent Item{ width: 10 height: 10 } TextField { id: textField1 placeholderText: qsTr("Text Field") selectByMouse: true background: Rectangle { implicitWidth: 200 implicitHeight: 40 color: "#eeeeee" border.color: "#21be2b" } text: "سلام خوبی" anchors.horizontalCenter: parent.horizontalCenter } TextArea{ width: 200 height: 200 anchors.horizontalCenter: parent.horizontalCenter background: Rectangle{ color: "lightgray" height: parent.height width: parent.width } text: "سلام خوبی" selectByKeyboard: true selectByMouse: true } } } }
For Gerrit Dashboard: QTBUG-61073 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
196553,5 | Android: Fix RTL selection handles directions | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |