Android: Fix RTL selection handles directions

Invert the selection handles icons when the selected text is rtl.

Task-number: QTBUG-61073
Change-Id: I8339a14d1e4d9e79d218516daf3ac783911f6026
Reviewed-by: Olivier Goffart (Woboq GmbH) <ogoffart@woboq.com>