src/android/jar/src/org/qtproject/qt5/android/QtNative.java
@@ -516,12 +516,13 @@ public class QtNative
                                       final int x1,
                                       final int y1,
                                       final int x2,
-                                      final int y2)
+                                      final int y2,
+                                      final boolean rtl)
     {
         runAction(new Runnable() {
             @Override
             public void run() {
-                m_activityDelegate.updateHandles(mode, x1, y1, x2, y2);
+                m_activityDelegate.updateHandles(mode, x1, y1, x2, y2, rtl);
             }
         });
     }
